<resources>

	<string name="app_name">Inspirational People</string>
	<string name="title_settings">Settings</string>
	<string name="title_edit_person">Edit Person</string>	
	<string name="title_crop_image">Crop image</string>
	
	<string name="menu_settings">Settings</string>
	<string name="menu_backup">Backup</string>
	<string name="menu_delete_person">Delete</string>
	<string name="add_person">Add Person</string>
	<string name="delete_person">Delete Contact</string>
	<string name="add_inspiration">Add Inspiration</string>
	<string name="enter_password">Enter the password</string>
	<string name="bt_backup">Backup</string>
	<string name="bt_restore">Restore</string>
	<string name="bt_cancel">Cancel</string>
	<string name="bt_save">Save</string>
	<string name="entrar">Entrar</string>
	<string name="change_password">Change password</string>
	<string name="current_password">Current password</string>
	<string name="new_password">New password</string>
	<string name="confirm_new_password">Confirm new password</string>
	<string name="data_manager">Data manager</string>
	<string name="person_name">Name</string>
	<string name="person_photo">Picture</string>
	<string name="person_photo_description">Person\'s photo</string>

	<string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>

    <string name="crop__done">DONE</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="no_inspiration">No inspiration</string>
	
</resources>